added support for project logo code cleanup added defaults for project added delete option for project added fetch for a single project added & updated docs
#8
