# functions/src/controllers/ProjectController.ts
@@ -7,6 +7,8 @@ import {
   fetchProject,
   updatedCoverImage,
   fetchAllProjects,
+  updatedLogoImage,
+  archiveProject,
 } from "../repository/ProjectRepo";
 import ClientController from "../controllers/ClientController";
 import { IMulterFileUpload } from "../interfaces/IMulterFileUpload";
@@ -29,7 +31,6 @@ export default class ProjectController {
   public addProject = async (
     name: string,
     clientId: string,
-    // files: IMulterFileUpload[],
     startDate?: string,
     endDate?: string,
     cost?: number,
@@ -52,23 +53,8 @@ export default class ProjectController {
         if (!endDatePayload.isValid()) throw invalidDateError("Invalid end date");
       }
 
-      /* let coverImage: IMulterFileUpload;
-      let logo: IMulterFileUpload;
-      // check if the necesarry files have been uploaded
-      files.forEach(file => {
-        if (file.fieldname === "cover") coverImage = file;
-        if (file.fieldname === "logo") logo = file;
-      });
-
-      if (!coverImage) throw missingParametersError("Missing cover image");
-      if (!logo) throw missingParametersError("Missing logo"); */
-
       // check if client exists before performing any operations
       await clientController.fetchClient(clientId);
-
-      // upload the cover image and logo
-      /* const coverImageObject = await uploadFile(coverImage);
-      const logoObject = await uploadFile(logo); */
 
       const response = await addProject(
         name,
@@ -78,27 +64,6 @@ export default class ProjectController {
         cost,
         currency,
       );
-
-      /* const storage = admin.storage();
-      const bucket = storage.bucket();
-      const bucketFile = bucket.file(`${PUBLIC_UPLOAD_PATH}/${uuid()}`);
-
-      await bucketFile.save(coverImage.buffer, {
-        contentType: coverImage.mimetype,
-        gzip: true,
-      }); */
-      // const destination = `${PUBLIC_UPLOAD_PATH}/${coverImage.originalName}`;
-
-      /* const [url] = await bucketFile.getSignedUrl({
-        action: "read",
-        expires: "01-01-2050",
-      }); */
-
-      /* const res = ((await bucketFile.makePublic()) as unknown) as IMakePublicResponse;
-      const url = `http(s)://storage.googleapis.com/${res.bucket}/${res.object}`;
-
-      // const result = await storage.bucket().upload(destination);
-      console.log("TCL: ProjectController -> publicaddProject -> result", url); */
 
       return response;
     } catch (error) {
@@ -129,7 +94,6 @@ export default class ProjectController {
 
       // check if project exists before performing any operations
       const project = await fetchProject(projectId);
-      console.log("TCL: ProjectController -> publicaddCoverImage -> project", project);
 
       // upload the cover image
       const coverImageObject = await uploadFile(coverImage);
@@ -140,36 +104,6 @@ export default class ProjectController {
       if (project && project.cover) {
         await deleteFile(project.cover.meta);
       }
-
-      /* const response = await addProject(
-        name,
-        clientId,
-        startDate ? startDatePayload.toDate() : undefined,
-        endDate ? endDatePayload.toDate() : undefined,
-        cost,
-        currency,
-      ); */
-
-      /* const storage = admin.storage();
-      const bucket = storage.bucket();
-      const bucketFile = bucket.file(`${PUBLIC_UPLOAD_PATH}/${uuid()}`);
-
-      await bucketFile.save(coverImage.buffer, {
-        contentType: coverImage.mimetype,
-        gzip: true,
-      }); */
-      // const destination = `${PUBLIC_UPLOAD_PATH}/${coverImage.originalName}`;
-
-      /* const [url] = await bucketFile.getSignedUrl({
-        action: "read",
-        expires: "01-01-2050",
-      }); */
-
-      /* const res = ((await bucketFile.makePublic()) as unknown) as IMakePublicResponse;
-      const url = `http(s)://storage.googleapis.com/${res.bucket}/${res.object}`;
-
-      // const result = await storage.bucket().upload(destination);
-      console.log("TCL: ProjectController -> publicaddProject -> result", url); */
 
       return response;
     } catch (error) {
@@ -207,6 +141,91 @@ export default class ProjectController {
   /**
    * ADMIN
    *
+   * adds a logo to a project
+   *
+   * @param {string} projectId - id of the project for which the cover image is being added
+   * @param {IMulterFileUpload[]} files - files array returned by multer
+   */
+  public addLogo = async (projectId: string, files: IMulterFileUpload[]) => {
+    try {
+      const isValid = setRequired(projectId);
+      if (!isValid) throw missingParametersError();
+
+      let logoImage: IMulterFileUpload;
+      // check if the necesarry files have been uploaded
+      files.forEach(file => {
+        if (file.fieldname === "logo") logoImage = file;
+      });
+
+      if (!logoImage) throw missingParametersError("Missing logo image");
+
+      // check if project exists before performing any operations
+      const project = await fetchProject(projectId);
+
+      // upload the logo
+      const logoImageObject = await uploadFile(logoImage);
+
+      const response = await updatedLogoImage(projectId, logoImageObject);
+
+      // delete the previous logo if any
+      if (project && project.logo) {
+        await deleteFile(project.logo.meta);
+      }
+
+      return response;
+    } catch (error) {
+      throw error;
+    }
+  };
+
+  /**
+   * ADMIN
+   *
+   * delete logo image for a project
+   *
+   * @param {string} projectId - id of the project for which the logo image is being deleted
+   */
+  public deleteLogoImage = async (projectId: string) => {
+    try {
+      const isValid = setRequired(projectId);
+      if (!isValid) throw missingParametersError();
+
+      const project = await fetchProject(projectId);
+
+      const response = await updatedLogoImage(projectId);
+
+      // delete the previous logo if any
+      if (project && project.logo) {
+        await deleteFile(project.logo.meta);
+      }
+
+      return response;
+    } catch (error) {
+      throw error;
+    }
+  };
+
+  /**
+   * ADMIN
+   *
+   * fetch a single project in the system
+   */
+  public fetchProject = async (projectId: string) => {
+    try {
+      const isValid = setRequired(projectId);
+      if (!isValid) throw missingParametersError();
+
+      const project = await fetchProject(projectId);
+
+      return project;
+    } catch (error) {
+      throw error;
+    }
+  };
+
+  /**
+   * ADMIN
+   *
    * fetch all projects in the system
    */
   public fetchAllProjects = async () => {
@@ -214,6 +233,33 @@ export default class ProjectController {
       const projects = await fetchAllProjects();
 
       return projects;
+    } catch (error) {
+      throw error;
+    }
+  };
+
+  /**
+   * ADMIN
+   *
+   * archive a project in the system
+   */
+  public archiveProject = async (projectId: string) => {
+    try {
+      const isValid = setRequired(projectId);
+      if (!isValid) throw missingParametersError();
+
+      // check if project exists before performing any operations
+      await fetchProject(projectId);
+
+      // delete the logo image
+      await updatedLogoImage(projectId);
+      // delete cover image
+      await updatedCoverImage(projectId);
+
+      // delete project from the db
+      const response = await archiveProject(projectId);
+
+      return response;
     } catch (error) {
       throw error;
     }
